App/deployment/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
