App/deployment/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-svc
  namespace: application
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
